<resources>
    <string name="app_name">Readev</string>
    <string name="find_beer">Find Beers!</string>
    <string name="brands">No beers selected</string>
    <string name="enter_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="watch_init">0:00:00</string>
    <string name="to">To</string>
    <string name="create_order">Create Order</string>
    <string name="create_order_title">Create Order</string>
    <string-array name="beer_colors">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>

    <string-array name="options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bits_pizzas">Bits and Pizzas</string>
    <string-array name="pizzas">
        <item>Diavolo</item>
        <item>Funghi</item>
    </string-array>
    <string-array name="pasta">
        <item>Spaghetti Bolognese</item>
        <item>Lasagne</item>
    </string-array>
    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
    </string-array>

    <string name="home_tab">Home</string>
    <string name="pizza_tab">Pizzas</string>
    <string name="pasta_tab">Pasta</string>
    <string name="store_tab">Stores</string>

    <!-- Chap 12 -->
    <string name="company_name">Bits and Pizzas</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="home_text">Since we opened our doors in 2017, Bits and Pizzas has built its reputation as one of America’s best Italian-Digital restaurants. Some people believe eating out is about being with your friends and family. We believe that good food is best enjoyed while staring at your phone.</string>

    <string name="order_name_hint">Please enter your name</string>
    <string name="order_details_hint">Please enter your order</string>

    <!-- Chap 14 -->
    <string name="app_name_chap14">CatChat</string>
    <string name="user_name">spot@catchat.com</string>

    <string name="nav_inbox">Mesagez</string>
    <string name="nav_drafts">Draftz</string>
    <string name="nav_sent">Sent mesagez</string>
    <string name="nav_trash">In da trash</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Halp</string>
    <string name="nav_feedback">Giv us feedback</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="favorite">Favorite</string>
    <string name="your_fav_drinks">Your favorite drinks</string>

    <string name="question">What is the secret of comedy?</string>
    <string name="response">Timing!</string>
</resources>